Fix row button alignment dependency on table column width configuration

--- a/Resources/styles/dataManager.element.scss
+++ b/Resources/styles/dataManager.element.scss
@@ -45,6 +45,10 @@
       }
     }
   }
+  // Right-align buttons even if columns have no (configured!) CSS width
+  td.interface {
+    text-align: right;
+  }
 }
 
 // Pop-up dialogs
